--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="img/bg.jpg" class="banner">
+        <img src="img/bg.jpg" alt="Uma mulher tecnologica" class="banner">
         <a href="#" class="logo">Aneska.</a>
         <div class="toggle"></div>
         <nav>
