--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p>Lorem ipsum dolor sit amet. magni libero aut earum voluptatum non provident maxime et voluptatem ducimus vel suscipit omnis non ducimus odit.</p>
                     <a href="#">Read More</a>
                 </div>
-                <img src="img/nathan.png"/>
+                <img src="img/nathan.png" alt="nathan" />
             </div>
             <div class="card">
                 <div class="content1">
@@ -42,7 +42,7 @@
                     <p>Lorem ipsum dolor sit amet. magni libero aut earum voluptatum non provident maxime et voluptatem ducimus vel suscipit omnis non ducimus odit.</p>
                     <a href="#">Read More</a>
                 </div>
-                <img src="img/sam.png"/>
+                <img src="img/sam.png" alt="sam" />
         </div>
     </div>
 
